--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+
 
 </head>
 <body class="mat-typography">
